Added skills section. The card layout for the skills section along with flaticon CDN. Also added Icon folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
+  <!-- Icon from flaticon -->
+  <link rel="stylesheet" href="Icon/flaticon.css">
+  <!--  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- ICON at the top -->
   <link rel="icon" href="icon.png" sizes="32x32">
@@ -47,7 +53,7 @@
       </button>
       <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item px-3 py-2 nav-link active" href="#">Introduction<span class="sr-only">(current)</span></a>
+          <a class="nav-item pr-3 pl-0 py-2 nav-link active" href="#">Introduction<span class="sr-only">(current)</span></a>
           <a class="nav-item px-3 py-2 nav-link" href="#">Projects</a>
           <a class="nav-item px-3 py-2 nav-link" href="#">Skills</a>
           <a class="nav-item px-3 py-2 nav-link" href="#">Ideas</a>
@@ -63,11 +69,10 @@
     <!--  -->
 
     <div class="container-fluid intro">
-      <div class="overlay">
         <div class="row justify-content-center row-cols-1">
           <div class="col">
             <figure class="text-center mt-5 pt-4 image_set">
-              <img src="headerMad.png" class="img-fluid mt-5 animated jackInTheBox delay-0.5s" alt="Main_Logo" width="515"
+              <img src="headerMad-logo.png" class="img-fluid mt-5 animated jackInTheBox delay-0.5s" alt="Main_Logo" width="515"
                 height="272">
             </figure>
           </div>
@@ -102,7 +107,6 @@
             </a>
           </div>
       </div>
-    </div>
   </div>
 
 
@@ -128,7 +132,6 @@
     </div>
     <!-- row-cols-sm-1 row-cols-md-2 row-cols-lg-4 row-cols-1  justify-content-around row-cols-sm-1 row-cols-md-2 row-cols-lg-4 row-cols-1  d-flex align-items-stretch-->
 
-    <div class="body-overlay">
       <section class="projects">
         <div class="container-fluid px-4 text-left">
            <div class="row mb-5 pb-5 justify-content-lg-center">
@@ -138,7 +141,6 @@
              <div class="col col-12 mt-3 mb-5">
                <div class="row d-flex justify-content-center">
                  <div class="col col-5 col-lg-4 col-md-3 col-sm-5 line-projects">
-
                  </div>
                </div>
              </div>
@@ -209,8 +211,110 @@
            </div>
        </div>
       </section>
-    </div>
 
+      <section class="skills">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                <div class="col col-12 text-center mt-4 mb-2">
+                   <h2 class="h2"><span id="slash">/</span>SKILLS</h2>
+                </div>
+                <div class="col col-12 mt-3 mb-5">
+                  <div class="row d-flex justify-content-center">
+                    <div class="col col-5 col-lg-4 col-md-3 col-sm-5 line-projects"></div>
+                  </div>
+                </div>
+                <div class="col col-10">
+                  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-1">
+                    <div class="col my-4">
+                      <div class="card shadow border-0 mb-3">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-microcontroller skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">ARDUINO</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col my-4">
+                      <div class="card border-0 mb-3 shadow">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-code skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">WEB DEVELOPMENT</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col my-4">
+                      <div class="card border-0 mb-3 shadow">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-java skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">JAVA</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col my-4">
+                      <div class="card border-0 mb-3 shadow">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-python-file skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">PYTHON</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col my-4">
+                      <div class="card border-0 mb-3 shadow">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-machinery skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">MACHINERY</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col my-4">
+                      <div class="card border-0 mb-3 shadow">
+                        <div class="card-header mt-3 border-0 bg-white">
+                            <i class="flaticon-water-pump skills-icon"></i>
+                        </div>
+                        <div class="card-body">
+                          <p class="card-title h6 mt-n2">INVENTOR</p>
+                          <div class="card-subtitle mb-4 mt-2 d-flex justify-content-center">
+                              <span class="skills-line"></span>
+                          </div>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim sed faucibus turpis in eu mi.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                </div>
+              </div>
+          </div>
+      </section>
 
     <!--  -->
     <footer>
